<resources>
    <string name="app_name">Goog</string>
    <string name="gaming_future"> Gaming **_** Future</string>
    <string name="Open">Drawer Open</string>
    <string name="Close">Drawer Close</string>
    <string name="contect">Contect Us : leadprojectemail@gmail.com</string>
    <string name="post_title">Welcome To Gaming Future. Play Game And Unlock your gift$$$$</string>
    <string name="post_descri">This is a Mobile gamer Media Site. Every gamer Will get reward. get game update news/resource/Premium Game collection/stream room etc.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mobile_game">Hot Mobile Game</string>
    <string name="premium_game">Premium Game</string>
    <string name="adult_game">Adult Game</string>
    <string name="about_app">About App</string>
    <string name="donate_us">Donate Us</string>
    <string name="home">Home</string>
    <string name="trending_n_game">trending \n game</string>
    <string name="mobile_n_game">mobile \n game</string>
    <string name="premium_n_game">premium \n game</string>

    <string name="About_Us">Game is Love and Gamer is Lover. \n Gaming Future is the best place to watch mobile gaming videos. \n  Find Lot of mobile gaming videos and Top trending game online. If you like an Adult game then you most welcome in Gaming Future(GF). Gaming Make you profitable, We found some gaming site.\n Just play Game and Take reward. </string>

    <string name="most_trending_mobile_game">Most Trending Mobile Game</string>

    <string name="game20">Hay Day is a freemium mobile farming game. The player,s uncle is unable to take care of his farm any more, so he hands over the responsibility of caring for the farm to the player. Various crops are unlocked at different stages of the game field crops, buy animals, capture animals.</string>
    <string name="game19">Mario Kart Tour is a kart racing mobile game, the fourteenth in the franchise in the Mario Kart series, developed and published by Nintendo for iOS and Android devices.</string>
    <string name="game18"> Marvel Future Fight is a 2015 superhero-themed video game. The game is created by Netmarble Games and released on April 30, 2015. This game is directly affiliated with Marvel Entertainment under Disney. Marvel Future Fight has been described as a dungeon crawler. Players have the option to use either virtual joystick and button controls or tap-based controls</string>
    <string name="game17">8 Ball Pool is a mobile and web browser billiards game by Miniclip. Play billiards online or single player on your phone tablet or home computer.</string>
    <string name="game16">Candy Crush Saga is a match-three puzzle video game released by the developer King on April 12, 2012 for Facebook, and on November 14, 2012 for smartphones. As of March 2013, Candy Crush Saga surpassed FarmVille 2 as the most popular game on Facebook, with 46 million average monthly users.It is a variation on their browser game Candy Crush.</string>
    <string name="game15">Boom Beach is a freemium massively multiplayer online real-time strategy game for iOS and Android, developed by Supercell. It was soft launched in Canada on 11 November 2013 and widely released on 26 March 2014.</string>
    <string name="game14">Angry Birds 2 is a 2015 puzzle video game and is the direct sequel to the original Angry Birds. Like the original Angry Birds, players use a slingshot to launch birds at nearby structures; a key difference in Angry Birds 2 is the ability to select birds of desired choice from a deck.</string>
    <string name="game13">Doodle Jump is a platforming video game developed and published by Lima Sky, for Windows Phone, iOS, BlackBerry, Android, Java Mobile, Nokia Symbian, and Xbox 360 for the Kinect platform. It was released worldwide for iOS on April 6, 2009, and was later released for Android and Blackberry on March 2, 2010, Symbian on May 1, 2010, and Windows Phone 7 on June 1, 2011.</string>
    <string name="game12">Roblox, stylized as RŌBLOX, is a massively multiplayer online game created and marketed toward children and teenagers aged 8–18. In the game, players are able to create their own virtual world, in which they or other members may enter and socialize within the blocks of varying shapes, sizes, and colors.</string>
    <string name="game11">Mobile Legends: Bang Bang is a mobile game developed and published by Moonton. Mobile Legends: Bang Bang is a multiplayer online battle arena (MOBA) game designed for mobile phones.</string>
    <string name="game10">Brawl Stars is a freemium mobile video game developed and published by the Finnish video game company Supercell.</string>
    <string name="game9">Pokémon Go is a free-to-play, location-based augmented reality game developed by Niantic for iOS and Android devices. The game was the result of a collaboration between Niantic and Nintendo, by way of The Pokémon Company, and was initially released in select countries in July 2016.</string>
    <string name="game8">War of the Visions: Final Fantasy Brave Exvius is a tactical role-playing game co-developed by Square Enix and Gumi Inc. and published by Square Enix for iOS and Android devices. It is a spin-off of Final Fantasy Brave Exvius that draws inspiration from the Final Fantasy Tactics series of games.</string>
    <string name="game7">Fortnite is a co-op sandbox survival game developed by Epic Games and People Can Fly, the former also publishing the game. The game was released as a paid early access title for Microsoft Windows, macOS, PlayStation 4 and Xbox One on July 25, 2017. A standalone mode, Fortnite Battle Royale, based on the battle royale game genre, was released for the same platforms in September 2017.</string>
    <string name="game6">Clash Royale is a freemium mobile tower rush video game developed and published by Supercell. The game combines elements from collectible card games, tower defense, and multiplayer online battle arena. The game was released globally on March 2, 2016. Clash Royale reached $1 billion in revenue in less than a year on the market.</string>
    <string name="game5">Garena Free Fire is an online multiplayer battle royale game, developed by 111 Dots Studio and published by Garena for Android and iOS. It became the most downloaded mobile game of 2019, due to its popularity, the game received the award for "Best Popular Vote Game" by the Google Play Store in 2019.</string>
    <string name="game4">Clash of Clans is a freemium mobile strategy video game developed and published by Finnish game developer Supercell. The game was released for iOS platforms on August 2, 2012, and on Google Play for Android on October 7, 2013.</string>
    <string name="game3">Minecraft is a sandbox independent video game originally created by Swedish programmer Markus "Notch" Persson and later developed and published by the Swedish company Mojang.</string>
    <string name="game2"> Call of Duty: Mobile is a free-to-play first-person shooter developed by TiMi Studios and published by Activision for Android and iOS. It was released worldwide on October 1, 2019. </string>
    <string name="game1">PlayerUnknown,s Battlegrounds (PUBG) is an online multiplayer battle royale game for iOs and Android In the game, up to one hundred players parachute onto an island and scavenge for weapons and equipment to kill others while avoiding getting killed themselves</string>
    <string name="premium_mobile_game_n_n_pay_fast_then_play">Premium Mobile Game  \n Pay Fast Then Play</string>
</resources>
